--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nestjs/mongoose": "^9.2.2",
     "@nestjs/passport": "^9.0.3",
     "@nestjs/platform-express": "^9.0.0",
+    "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
     "helmet": "^7.0.0",
     "mongoose": "^7.2.3",
